--- a/_posts/blog/2017-08-09-Struts2.md
+++ b/_posts/blog/2017-08-09-Struts2.md
@@ -7,7 +7,7 @@ keywords: SSH,Struts2
 ---
 ## Struts2框架来历:
    要知道Struts2的来历就一定要先知道WebWork.
-   WebWork室友OpenSymphony组织开发的,致力于J2EE的web框架.
+   WebWork是由OpenSymphony组织开发的,致力于J2EE的web框架.
    值得大家注意的是:Struts2和Struts1一样属于MVC框架,但是二者之间在代码的编写风格上完全不一样.Struts2属于无侵入式设计,而Struts1属于侵入式设计,与Servlet API等有紧密的联系.
 
 ----------
@@ -69,6 +69,7 @@ keywords: SSH,Struts2
 		- 都是java的一个类.
 		- 都能拦截传往服务器的请求.
 		- 都可以放行请求.
+		
    不同点:
 		
 		- 拦截器(interceptor)是struts2框架中的定义的,过滤器(filter)是web里面的对象,是J2EE标准里面定义的.
