--- a/_posts/blog/2017-09-03-Struts2_2.md
+++ b/_posts/blog/2017-09-03-Struts2_2.md
@@ -18,7 +18,7 @@ keywords: SSH,Struts2
 
   在前台(jsp等):
 
-标签<s:set value="..."/>默认将值存入ActionContext中（当然，<s:set>标签还可以把值存到其他地方）。另外，许多标签都有var属性（以前用的是id属性，现在id属性已被弃用），这个属性能向ActionContext存入值，key为var属性的值，value为标签的value属性的值.
+   标签<s:set value="..."/>默认将值存入ActionContext中（当然，<s:set>标签还可以把值存到其他地方）。另外，许多标签都有var属性（以前用的是id属性，现在id属性已被弃用），这个属性能向ActionContext存入值，key为var属性的值，value为标签的value属性的值.
 
 - 从ActionContext中取出值:
 
@@ -26,8 +26,8 @@ keywords: SSH,Struts2
 
   在JSP中：
 
-使用#开头的Ognl表达式，比如<s:property value="#name"/>会调用ActionContext.get("name")方法。注意：如果某标签的属性默认不作为Ognl表达式解析，则需要使用%{}把表达式括起来，于是就会出现类似“%{#name}的表达式”。（“#”的更多用途参见这里）
-总之，在JSP中使用ActionContext一方面是由于它是映射结构，另一方面是能读取Action的一些配置。当你需要为许多Action提供通用的值的话，可以让每个Action都提供getXXX()方法，但更好的方法是在拦截器或JSP模板中把这些通用的值存放到ActionContext中（因为拦截器或JSP模板往往通用于多个Action）.
+   使用#开头的Ognl表达式，比如<s:property value="#name"/>会调用ActionContext.get("name")方法。注意：如果某标签的属性默认不作为Ognl表达式解析，则需要使用%{}把表达式括起来，于是就会出现类似“%{#name}的表达式”。（“#”的更多用途参见这里）
+   总之，在JSP中使用ActionContext一方面是由于它是映射结构，另一方面是能读取Action的一些配置。当你需要为许多Action提供通用的值的话，可以让每个Action都提供getXXX()方法，但更好的方法是在拦截器或JSP模板中把这些通用的值存放到ActionContext中（因为拦截器或JSP模板往往通用于多个Action）.
 
 ----------
 ## ValueStack(值栈)
@@ -41,7 +41,15 @@ keywords: SSH,Struts2
 
   在JSP中：
 
-在JSP中存入值栈：标签<s:push value="..."></s:push>是专门用来在JSP中把指定的value放入值栈的，但value被放入值栈的时间仅在s:push标签内，即程序运行到</s:push>标签处会把value从值栈中移出。另外，还有一些标签比如<s:iterator/>由于其功能的需要也会把一些对象放到值栈中.
+   在JSP中存入值栈：标签<s:push value="..."></s:push>是专门用来在JSP中把指定的value放入值栈的，但value被放入值栈的时间仅在s:push标签内，即程序运行到</s:push>标签处会把value从值栈中移出。另外，还有一些标签比如<s:iterator/>由于其功能的需要也会把一些对象放到值栈中.
+
+- 从ValueStack中取出值:
+
+  在服务端:使用ValueStack.findValue(...)方法
+  
+  在JSP中:
+
+一些标签的属性是直接在值栈上执行Ognl表达式的，比如<s:property/>的value属性。如果标签的属性不是直接执行Ognl表达式的，则需要使用“%{}”将表达式括起来
 
 
 ----------
