--- a/_posts/blog/2017-09-03-Struts2_2.md
+++ b/_posts/blog/2017-09-03-Struts2_2.md
@@ -6,7 +6,7 @@ description: SSH框架Struts2总结
 keywords: SSH,Struts2
 ---
 前几天写了关于Struts2框架总结(一)[https://mino0885.github.io/2017/08/09/Struts2/](https://mino0885.github.io/2017/08/09/Struts2/ "总结一"),今天来把之前留下的坑补完...
-## ActionContext详解
+## ActionContext
    首先,ActionContext是Action的上下文对象,Struts2框架本身自动在其中保存了一些Action执行过程需要用到的对象(session等).
    并且,一个线程有一个唯一的ActionContext,Struts2会根据线程来创建对应的ActionContext,所以Action的线程是安全的
    ActionContext的目的是毋庸置疑的--存数据.Struts2本身的数据也好,我们自己存入的数据也好.涉及到存储数据就有
