--- a/_posts/blog/2017-11-30-JackSon.md
+++ b/_posts/blog/2017-11-30-JackSon.md
@@ -42,11 +42,11 @@ keywords: SpringMVC,JackSon.Ajax
 ----------
 ## 关于JackSon
    使用Spring4后如果使用低版本的JackSon发现会有如下错误:
-    `
-	org.springframework.beans.factory.BeanCreationException: Error creating bean with name 
+    
+``` org.springframework.beans.factory.BeanCreationException: Error creating bean with name 
 	‘org.springframework.web.servlet.mvc.method.annotation.RequestMappingHandlerMapping’: Invocation of init method failed; nested exception is org.springframework.beans.factory.CannotLoadBeanClassException: Cannot find class [org.springframework.web.servlet.view.json.MappingJacksonJsonView]
-
-	`
+```
+	
    需要更换Spring jackson依赖，Spring MVC返回 json 的时候需要依赖jackson的jar包，以前是codehaus.jackson，现在换成了fasterxml.jackson 同时修改配置文件
    pom文件中添加如下解决:
 
