--- a/_posts/blog/2017-09-03-Struts2_2.md
+++ b/_posts/blog/2017-09-03-Struts2_2.md
@@ -5,7 +5,7 @@ categories: SSH
 description: SSH框架Struts2总结
 keywords: SSH,Struts2
 ---
-前几天写了关于Struts2框架总结(一)[https://mino0885.github.io/2017/08/09/Struts2/](https://mino0885.github.io/2017/08/09/Struts2/ "总结一"),今天来把之前留下的坑补完...
+前几天写了关于Struts2框架总结(一)[总结一]("https://mino0885.github.io/2017/08/09/Struts2_1/"),今天来把之前留下的坑补完...
 ## ActionContext
    首先,ActionContext是Action的上下文对象,Struts2框架本身自动在其中保存了一些Action执行过程需要用到的对象(session等).
    并且,一个线程有一个唯一的ActionContext,Struts2会根据线程来创建对应的ActionContext,所以Action的线程是安全的
@@ -65,4 +65,4 @@ keywords: SSH,Struts2
 5．寻找namespace为/的package，如果存在这个package，则在这个package中寻找名字为test的action，当在package中寻找不到action或者不存在这个package时，都会去默认namaspace的package里面寻找action，如果还是找不到，页面提示找不到action。
 
 ----------
-参考自: http://www.cnblogs.com/5ishare/p/6628532.html;http://blog.csdn.net/jiangwei0910410003/article/details/26870359
+参考自: [http://www.cnblogs.com/5ishare/p/6628532.html](http://www.cnblogs.com/5ishare/p/6628532.html)  ; [http://blog.csdn.net/jiangwei0910410003/article/details/26870359](http://blog.csdn.net/jiangwei0910410003/article/details/26870359)
