--- a/_posts/blog/2017-2-10-JDK8.md
+++ b/_posts/blog/2017-2-10-JDK8.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: JDK8新特性
-categories: 其他
+categories: SE基础
 description: JDK发布已经很久了,那么他对比之前的版本有什么变化呢
 keywords: JDK,JDK8
 ---
