--- a/_posts/blog/2017-09-05-Mybatis_1.md
+++ b/_posts/blog/2017-09-05-Mybatis_1.md
@@ -251,3 +251,28 @@ keywords: SSM, Mybatis
 			  <mapper url="file:///var/mappers/BlogMapper.xml"/>
 			  <mapper url="file:///var/mappers/PostMapper.xml"/>
 			</mappers>
+
+## Mybatis缓存机制
+
+- 查询缓存
+  > Mybatis提供查询缓存,可以减轻数据压力,提高性能,有一级缓存和二级缓存
+- 一级缓存:
+  - 简介:
+    一级缓存是SqlSession级别的,一级缓存的作用域是同一个SqlSession，在同一个sqlSession中两次执行相同的sql语句，第一次执行完毕会将数据库中查询的数据写到缓存（内存），第二次会从缓存中获取数据将不再从数据库查询，从而提高查询效率。当一个sqlSession结束后该sqlSession中的一级缓存也就不存在了.**Mybatis默认开启一级缓存**
+  - 一级缓存应用:
+    正式开发中,Mybatis一般是和Spring整和开发的.事物管理在service层中,而service中一个方法可能会有多个dao调用如果一个方法中调用了两次相同查询则会走一级缓存机制,而如果调用了多次service方法,则不走一级缓存机制,因为方法结束时候sqlsession关闭,一级缓存清空
+- 二级缓存:
+  - 简介:Mybatis二级缓存默认是不开启的,需要手动设置开启
+    ![](http://img.blog.csdn.net/20150726164234783?watermark/2/text/aHR0cDovL2Jsb2cuY3Nkbi5uZXQv/font/5a6L5L2T/fontsize/400/fill/I0JBQkFCMA==/dissolve/70/gravity/Center)
+    sqlSession1去查询用户id为1的用户信息，查询到用户信息会将查询数据存储到二级缓存中。
+    如果SqlSession3去执行相同 mapper下sql，执行commit提交，清空该 mapper下的二级缓存区域的数据。
+    sqlSession2去查询用户id为1的用户信息，去缓存中找是否存在数据，如果存在直接从缓存中取出数据。
+  - 与一级缓存区别:二级缓存的范围更大,多个sqlsession直接可以共享一个缓存区
+  - 如何开启:
+		<settings>
+		<!-- 开启二级缓存  默认值为true -->
+		<setting name="cacheEnabled" value="true"/>
+		</settings>
+- 缓存刷新:
+  mapper中一个namespace如果有insert update delete 操作后需要刷新缓存区,否则会出现脏读
+  设置statement配置中的**flushCache="true"** 属性，默认情况下为true即刷新缓存，如果改成false则不会刷新。使用缓存时如果手动修改数据库表中的查询数据会出现脏读。
