--- a/_posts/blog/2017-09-05-Mybatis_1.md
+++ b/_posts/blog/2017-09-05-Mybatis_1.md
@@ -55,115 +55,7 @@ keywords: SSM, Mybatis
 		<properties resource="JDBC.properties"/>
 
 - setting
-这是 MyBatis 中极为重要的调整设置，它们会改变 MyBatis 的运行时行为。下表描述了设置中各项的意图、默认值等。
-
-	1. cacheEnabled
-	
-	boolean属性，默认是true。该配置影响的所有映射器中配置的缓存的全局开关。
-	
-	2. lazyLoadingEnabled
-	
-	boolean属性，默认值是false。延迟加载的全局开关。当开启时，所有关联对象都会延迟加载。 特定关联关系中可通过设置fetchType属性来覆盖该项的开关状态。
-	
-	3. aggressiveLazyLoading
-	
-	boolean属性，jar版本3.4.1以下是true。3.4.1以上是false。当启用时，任何方法的调用都会加载该对象的所有属性。不开启，按需加载。
-	
-	4. multipleResultSetsEnabled
-	
-	boolean属性，默认值是true。是否允许单一语句返回多结果集合。（需要兼容驱动）
-	
-	5. useColumnLabel
-	
-	boolean属性，默认值为true。使用列标签代替列名。
-	
-	6. useGeneratedKeys
-	
-	boolean属性，默认值为false。允许JDBC支持自动生成主键。如果设置为true，则这个设置强制使用自动生成主键。(需要驱动兼容)
-	
-	7. autoMappingBehavior
-	
-	枚举属性，三个可选值：None（表示取消自动映射）、Partial（表示只会自动映射没有定义嵌套结果集映射的结果集）、Full（表示会自动映射任意复杂的结果集），默认值为：Partial。
-	
-	8. autoMappingUnknownColumnBehavior
-	
-	枚举属性，三个可选值：None（不做任何反应）、WARNING（输出提醒日志，org.apache.ibatis.session.AutoMappingUnknownColumnBehavior日志等级必须设置为Warn）、FAILING（映射失败，抛出SqlSessionException）。默认值为None。
-	
-	9. defaultExecutorType
-	
-	枚举属性，三个可选值：SIMPLE（普通执行器）、REUSE（会重用预处理语句（prepared statements））、BATCH（重用语句并执行批量更新）
-	
-	10. 重用语句并执行批量更新
-	
-	任意正整数，默认值没有设置。设置超时时间，它决定驱动等待数据库响应的秒数。
-	
-	11. defaultFetchSize
-	
-	任意正整数，默认值没有设置。为驱动的结果集获取数量（fetchSize）设置一个提示值。此参数只可以在查询设置中被覆盖。
-	
-	12. safeRowBoundsEnabled
-	
-	boolean属性，默认值为false。允许在嵌套语句中使用分页（RowBounds）。如果允许使用则设置为false。
-	
-	13. safeResultHandlerEnabled
-	
-	boolean属性，默认值为true。允许在嵌套语句中使用分页（ResultHandler）。如果允许使用则设置为false。
-	
-	14. mapUnderscoreToCamelCase
-	
-	boolean属性，默认为false。是否开启自动驼峰命名规则（camelcase）映射，即从经典数据库列名 A_COLUMN 到经典 Java 属性名 aColumn 的类似映射。
-	
-	15. localCacheScope
-	
-	枚举属性，两个枚举属性：SESSION（会缓存一个会话中执行的所有查询）、STATEMENT（本地会话仅用在语句执行上，对相同SqlSession的不同调用将不会共享数据。）。默认值为SESSION。
-	
-	16. jdbcTypeForNull
-	
-	JDBCType属性，常用的属性有：Null、Varchar、Other。当没有为参数提供特定的 JDBC 类型时，为空值指定 JDBC 类型。
-	
-	17. lazyLoadTriggerMethods
-	
-	指定哪个对象的方法触发一次延迟加载。
-	
-	18. defaultScriptingLanguage
-	
-	指定动态SQL生成的默认语言。
-	
-	19. defaultEnumTypeHandler
-	
-	Specifies the TypeHandler used by default for Enum. (Since: 3.4.5)
-	
-	20. callSettersOnNulls
-	
-	boolean属性，默认值为false。。指定当结果集中值为null的时候是否调用映射对象的 setter（map 对象时为put）方法，这对于有Map.keySet()依赖或null值初始化的时候是有用的。注意基本类型（int、boolean等）是不能设置成 null 的。
-	
-	21. returnInstanceForEmptyRow
-	
-	boolean属性，默认值为false。当返回行的所有列都是空时，MyBatis默认返回null。
-	
-	22. logPrefix
-	
-	String类型，指定 MyBatis 增加到日志名称的前缀。
-	
-	23. logImpl
-	
-	枚举值，指定 MyBatis 所用日志的具体实现，未指定时将自动查找。SLF4J | LOG4J | LOG4J2 | JDK_LOGGING | COMMONS_LOGGING | STDOUT_LOGGING | NO_LOGGING
-	
-	24. proxyFactory
-	
-	枚举值，指定 Mybatis 创建具有延迟加载能力的对象所用到的代理工具。CGLIB | JAVASSIST。默认值:JAVASSIST (MyBatis 3.3 or above)
-	
-	25. vfsImpl
-	
-	指定VFS的实现。自定义VFS的实现的类全限定名，以逗号分隔。
-	
-	26. useActualParamName
-	
-	boolean属性，默认值为true。允许使用方法签名中的名称作为语句参数名称。为了使用该特性，你的工程必须采用Java8编译，并且加上-parameters选项。（从3.4.1开始）
-	
-	27. configurationFactory
-	
-	指定一个提供Configuration实例的类.这个被返回的Configuration实例是用来加载被反序列化对象的懒加载属性值. 这个类必须包含一个签名方法static Configuration getConfiguration(). (从 3.2.3 版本开始)
+这是 MyBatis 中极为重要的调整设置，它们会改变 MyBatis 的运行时行为。(详情参照官网)
 	
   一个配置完整的 settings 元素的示例如下：
 
