--- a/_posts/blog/2017-09-03-Mybatis.md
+++ b/_posts/blog/2017-09-03-Mybatis.md
@@ -17,7 +17,7 @@ Mybatis是Apache的一个开源持久层框架.原来叫IBatis,2010年改名为M
 - Mybatis可以更为细致的进行SQL优化,减少查询字段等,Hibernate虽然也可以书写查询语句,但是较为复杂
 - Mybatis需要维护SQL和映射文件
 - Hibernate对数据库移植性很好,而Mybatis对数据库的移植不好,不同的数据库需要自己书写不同的SQL语句
-- Hibernate有更好的耳机缓存,甚至可以使用第三方的三级缓存,而Mybatis本身提供的缓存机制欠佳
+- Hibernate有更好的二级缓存,甚至可以使用第三方的三级缓存,而Mybatis本身提供的缓存机制欠佳
 
 ## Mybatis简单实现
 
