--- a/_posts/blog/2018-04-13-IM_Netty.md
+++ b/_posts/blog/2018-04-13-IM_Netty.md
@@ -30,4 +30,4 @@ NIO又称非阻塞IO(Non-blocking I/O)
 ## Netty与长连接
 Netty并不是唯一的长连接实现 HTTP 1.1 也是使用的长连接,只是Netty来实现短连接有点大材小用的感觉,只是短连接的话没有必要使用Netty这种复杂的技术来实现
 
-详细的Netty Api介绍会在之后陆续更新
+详细的Netty Api介绍会在之后
